[package]
name = "flat-replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.75"
boxcars = "0.9.11"
serde = "1.0.193"
serde_json = "1.0.108"
bimap = { version = "0.6.3", features = ["serde"] }
